--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Explore our AI-powered code generator – a revolutionary tool for effortless code creation in multiple programming languages. Enhance your coding experience with error-free snippets, streamlined development, and increased productivity. Try our free online code generation tool today!">
  <meta name="keywords" content="AI code generator, code generation tool, programming language generator, automatic code creation, code automation, text-to-code, code snippet generator, coding assistant, development tools, machine learning code, programming utilities, code optimization, code suggestions, programming productivity, software development, coding efficiency, online coding tool, syntax error-free code, programming assistance">
   <link href="/css/landing-style.css" rel="stylesheet" type="text/css" />
+  <link href="/_theme (1).css" rel="stylesheet" type="text/css" />
     <link href="/css/badge.css" rel="stylesheet" type="text/css" />
   <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
@@ -66,9 +67,9 @@
 <br>
 
   <span style="display: block; font-size: 3em; color: white; margin-left: 10px; margin-top: 3em; margin-bottom: 7px;"> Generated Code: </span>
-  <div id="gcode" style="margin-top: 10px; margin: 0 auto; width: 100%; border: 1px solid green; border-radius: 4px; display: flex;">
+  <div id="gcode" style="margin-top: 10px; margin: 0 auto; width: 100%; height: 70%; border: 1px solid green; border-radius: 4px; display: flex;">
     <span id="bang" style="display: block; font-size: 22px; color: white; margin-left: 8px; margin-top: 4px; margin-bottom: 12px;">Bang test</span> <br>
-    <div id="editor" style="width: 90%; margin: 0 auto; height: 70%;"></div>
+    <div id="editor" style="width: 90%; margin: 0 auto; height: 90%;" class="ace_dark ace-rk"></div>
   </div>
 
 
