--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -67,11 +67,11 @@
 <br>
 
   <span style="display: block; font-size: 3em; color: white; margin-left: 10px; margin-top: 3em; margin-bottom: 7px;"> Generated Code: </span>
-  <div id="gcode" style="margin-top: 10px; margin: 0 auto; width: 100%; height: 70%; border: 1px solid green; border-radius: 4px; display: flex; flex-direction: row;">
-    <span id="bang" style="display: block; font-size: 22px; color: white; margin-left: 8px; margin-top: 4px; margin-bottom: 12px;">Bang test</span> <br>
-    <div id="editor" style="width: 90%; margin: 0 auto; height: 90%;" class="ace_dark ace-rk"></div>
+  <div id="gcode" style="margin-top: 10px; margin: 0 auto; width: 100%; border: 1px solid green; border-radius: 4px; display: flex; flex-direction: row;">
+    <span id="bang" style="display: block; font-size: 22px; color: white; margin-left: 8px; margin-top: 4px; margin-bottom: 12px;">Gwnerate Your Code now</span> <br>
+    
   </div>
-
+<div id="editor" style="width: 90%; margin: 0 auto; height: 70%;" class="ace_dark ace-rk"></div>
 
 
 <h2>Our AI tool helps you generate code from your prompt, a process also known as Text-to-Code. Our AI can generate code in most languages, and you can also debug your code using our tool.</h2>
