--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -67,7 +67,7 @@
 <br>
 
   <span style="display: block; font-size: 3em; color: white; margin-left: 10px; margin-top: 3em; margin-bottom: 7px;"> Generated Code: </span>
-  <div id="gcode" style="margin-top: 10px; margin: 0 auto; width: 100%; border: 1px solid green; border-radius: 4px; display: flex; flex-direction: row;">
+  <div id="gcode" style="margin-top: 10px; margin: 0 auto; width: 100%; border: 1px solid green; border-radius: 4px; display: block;">
     <span id="bang" style="display: block; font-size: 22px; color: white; margin-left: 8px; margin-top: 4px; margin-bottom: 12px;">Gwnerate Your Code now</span> <br>
     
   </div>
@@ -111,11 +111,14 @@
     var prompt_ = document.querySelector("#prmpt");
     var gcode = document.querySelector("#gcode");
     var editor = ace.edit("editor");
+    editir.setMode("javascript");
+    var gh = document.querySelector("#bang");
     function generate(){
       if(!prompt_.value || prompt_.value.trim() === ""){
 prompt_.focus();
         return;
       };
+      gh.innerHTML = "GENERATING YOUR CODE.. \nPlease Dont close the tab this process can take upto few seconds Please Be patient, Thank You ";
     prompt_.disabled = true;
     btn.disabled = true;
     gcode.scrollIntoView({
@@ -128,6 +131,8 @@ fetch(`https://tool-sphere.onrender.com/api/code-gen?q=${document.querySelector(
   editor.setValue = by.result.data[0];
   prompt_.disabled = false;
   btn.disabled = false;
+  gh.innerHTML = "Your Code Generated Successfully, Thanks For using out Tool";
+  
   gcode.scrollIntoView({
   behavior: "smooth",
   block: "center",  
