--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -68,7 +68,7 @@
 
   <span style="display: block; font-size: 3em; color: white; margin-left: 10px; margin-top: 3em; margin-bottom: 7px;"> Generated Code: </span>
   <div id="gcode" style="margin-top: 10px; margin: 0 auto; width: 100%; border: 1px solid green; border-radius: 4px; display: block;">
-    <span id="bang" style="display: block; font-size: 22px; color: white; margin-left: 8px; margin-top: 4px; margin-bottom: 12px;">Gwnerate Your Code now</span> <br>
+    <span id="bang" style="display: block; font-size: 22px; color: white; margin-left: 8px; margin-top: 4px; margin-bottom: 12px;">Generate Your Code now</span> <br>
     
   </div>
 <div id="editor" style="width: 90%; margin: 0 auto; height: 70%;" class="ace_dark ace-rk"></div>
@@ -129,7 +129,7 @@ prompt_.focus();
       
 fetch(`https://tool-sphere.onrender.com/api/code-gen?q=${document.querySelector("#prmpt").value}`).then(json => json.json()).then(dy => {
 //document.querySelector("#gcode").innerHTML = dy.result.data[0];
-  editor.setValue = by.result.data[0];
+  editor.setValue(by.result.data[0]);
   prompt_.disabled = false;
   btn.disabled = false;
   gh.innerHTML = "Your Code Generated Successfully, Thanks For using out Tool";
