--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -127,8 +127,7 @@ prompt_.focus();
   block: "center",  
 });
       
-fetch(`https://tool-sphere.onrender.com/api/code-gen?q=${document.querySelector("#prmpt").value}`).then(json => json.json()).then(dy => {
-//document.querySelector("#gcode").innerHTML = dy.result.data[0];
+fetch(`https://tool-sphere.onrender.com/api/code-gen?q=${document.querySelector("#prmpt").value}`).then(json => json.json()).then(async dy => {
   editor.setValue(by.result.data[0]);
   prompt_.disabled = false;
   btn.disabled = false;
