--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -128,7 +128,7 @@ prompt_.focus();
 });
       
 fetch(`https://tool-sphere.onrender.com/api/code-gen?q=${document.querySelector("#prmpt").value}`).then(json => json.json()).then(async dy => {
-  editor.setValue(by.result.data[0]);
+  editor.setValue(dy.result.data[0]);
   prompt_.disabled = false;
   btn.disabled = false;
   gh.innerHTML = "Your Code Generated Successfully, Thanks For using out Tool";
