--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -81,7 +81,15 @@
 
   <h2>14. Contact Information</h2>
   <p>For any inquiries or concerns regarding your privacy, you can reach out to us through the following:</p>
-  <ul>
+  
+  <h2>15. Google AdSense</h2>
+  <p>
+    Our website uses Google AdSense, a third-party advertising service provided by Google Inc. AdSense may use cookies to serve personalized ads based on your interests and previous interactions. These cookies allow Google and its partners to show ads based on your visits to our site and other sites on the Internet.
+  </p>
+  <p>
+    You can opt-out of personalized advertising by visiting <a href="https://adssettings.google.com">Ad Settings</a>. For more information about how Google uses data when you use our website and how to control your information, please visit Google's <a href="https://policies.google.com/technologies/partner-sites">Privacy & Terms</a> page.
+  </p>   
+    <ul>
     <li><strong>Contact Page:</strong> <a href="https://tool-sphere.github.io/contact">Tool Sphere Contact</a></li>
     <li><strong>Email:</strong> <a href="mailto:sujoyk211@gmail.com">sujoyk211@gmail.com</a></li>
   </ul>
