--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -22,6 +22,61 @@
   <link rel="canonical" href="https://tool-sphere.github.io/" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.3/ace.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
+<style>
+  .loading {
+ /* position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);*/
+  height: 50px;
+  display: flex;
+  align-items: center;
+}
+.obj {
+  width: 6px;
+  height: 0px;
+  /*background: #17a2b8;*/
+  margin: 0 3px;
+  border-radius: 10px;
+  animation: loading 1.4s infinite;
+}
+.obj:nth-child(2){
+  animation-delay: 0.15s;
+}
+.obj:nth-child(3){
+  animation-delay: 0.3s;
+}
+.obj:nth-child(4){
+  animation-delay: 0.45s;
+}
+.obj:nth-child(5){
+  animation-delay: 0.6s;
+}
+.obj:nth-child(6){
+  animation-delay: 0.75s;
+}
+.obj:nth-child(7){
+  animation-delay: 0.9s;
+}
+.obj:nth-child(8){
+  animation-delay: 1.05s;
+}
+@keyframes loading {
+  0% {
+    height: 0;
+    background-color: #ff0080;  /*pink*/
+  }
+  50% {
+    height: 50px;
+        background-color: #02f006; /*green*/
+  }
+  100% {
+    height: 0;
+        background-color: cyan;  /*cyan*/
+  }
+}
+  }
+</style>
 </head>
 
 <body>
@@ -120,7 +175,7 @@ prompt_.focus();
         return;
       };
       prompt_.blur();
-      gh.innerHTML = "GENERATING YOUR CODE.. \nPlease Dont close the tab this process can take upto few seconds Please Be patient, Thank You ";
+      gh.innerHTML = "GENERATING YOUR CODE.. <br> Please Dont close the tab this process can take upto 10 seconds Please Be patient, Thank You <br> <div class='loading'><div class='obj'></div></div>";
     prompt_.disabled = true;
     btn.disabled = true;
       editor.setValue();
@@ -172,3 +227,5 @@ function detectLanguage(code) {
   
 </body>
   </html>
+
+
