--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -176,7 +176,7 @@ prompt_.focus();
         return;
       };
       prompt_.blur();
-      gh.innerHTML = "GENERATING YOUR CODE.. <br> Please Dont close the tab this process can take upto 10 seconds Please Be patient, Thank You <br> <div style='margin-top: 8px;' class='loading'><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div></div>";
+      gh.innerHTML = "GENERATING YOUR CODE.. <br> Please Dont close the tab this process can take upto 10 seconds Please Be patient, Thank You <br> <div style='margin-top: 8px;' class='loading'><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div></div> <br> Dont Close The window! <br> Generating Best Code For you, And Applying Beauty To your code";
     prompt_.disabled = true;
     btn.disabled = true;
       editor.setValue();
@@ -195,7 +195,7 @@ fetch(`https://tool-sphere.onrender.com/api/code-gen?q=${document.querySelector(
   editor.setValue(dy.result.data[0]);
   prompt_.disabled = false;
   btn.disabled = false;
-  gh.innerHTML = "Your Code Generated Successfully, Thanks For using out Tool";
+  gh.innerHTML = "Your Code Generated Successfully ✅, Thanks For using out Tool";
   editor.setReadOnly(false);
   gcode.scrollIntoView({
   behavior: "smooth",
