--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>AI code generator : generate code using AI • Tool Sphere</title>
+  <title>Free AI code generator : generate code using AI Without Login• Tool Sphere</title>
   <meta name="description" content="Explore our AI-powered code generator – a revolutionary tool for effortless code creation in multiple programming languages. Enhance your coding experience with error-free snippets, streamlined development, and increased productivity. Try our free online code generation tool today!">
- <meta name="keywords" content="AI code generator, code generation tool, programming language generator, automatic code creation, code automation, text-to-code, code snippet generator, coding assistant, development tools, machine learning code, programming utilities, code optimization, code suggestions, programming productivity, software development, coding efficiency, online coding tool, syntax error-free code, programming assistance">
+ <meta name="keywords" content="AI code generator, code generation tool, programming language generator, automatic code creation, code automation, text-to-code, code snippet generator, coding assistant, development tools, machine learning code, programming utilities, code optimization, code suggestions, programming productivity, software development, coding efficiency, online coding tool, syntax error-free code, programming assistance, AI code generator without login, code generator without login, no api ke required, replit ghost writer api, code writer api, code generator api, ai code generator api, free, no key required, no login required, no api token required, free code generator for all">
   <link href="/css/landing-style.css" rel="stylesheet" type="text/css" />
   <link href="/Etheme.css" rel="stylesheet" type="text/css" />
     <link href="/css/badge.css" rel="stylesheet" type="text/css" />
@@ -24,10 +24,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
 <style>
   .loading {
- /* position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);*/
   height: 50px;
   display: flex;
   align-items: center;
@@ -36,7 +32,6 @@
 .obj {
   width: 6px;
   height: 0px;
-  /*background: #17a2b8;*/
   margin: 0 3px;
   border-radius: 10px;
   animation: loading 1.4s infinite;
@@ -107,7 +102,7 @@
 </div>
   
   <div style="width: 100%; text-align: center; border: 0.5px solid white; border-radius: 5px;">
-<h1>AI code generator : generate code using AI in any language</h1>
+<h1>AI code generator : generate code using AI in any language Without Login</h1>
   </div> 
  <span style="text-align: center; align-items: center; font-size: 4em;"><span class="green-badge" style="margin-left: 10px;">New</span><span class="yellow-badge" style="margin-left: 10px;">AI</span><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
  
@@ -131,7 +126,7 @@
 <div id="editor" style="width: 90%; margin: 0 auto; height: 70%;" class="ace_dark ace-rk"></div>
 
 
-<h2>Our AI tool helps you generate code from your prompt, a process also known as Text-to-Code. Our AI can generate code in most languages, and you can also debug your code using our tool.</h2>
+<h2>Our AI tool helps you generate code from your prompt without any api key ir login required, a process also known as Text-to-Code. Our AI can generate code in most languages, and you can also debug your code using our tool.</h2>
 
 <!--- FAQ --->
 
