--- a/about-us.html
+++ b/about-us.html
@@ -24,11 +24,23 @@
             max-width: 100%;
             height: auto;
         }
+        button {
+            background-color: #007BFF;
+            color: #fff;
+            padding: 10px 15px;
+            border: none;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 
 <body>
-
+<a href="#" onclick="history.go(-1); return false;"><button>&lt; Back</button></a>
+    
     <h1>About Us - Tool Sphere</h1>
 
     <p>Welcome to Tool Sphere, your destination for a variety of free online tools. Our mission is to provide free tools to everyone, without the need for logins or API keys.</p>
