--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -1,1 +1,68 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us - Tool Sphere</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        p {
+            color: #666;
+        }
+
+        .back-button {
+            background-color: #007BFF;
+            color: #fff;
+            padding: 10px 15px;
+            border: none;
+            cursor: pointer;
+            text-decoration: none;
+        }
+
+        .back-button:hover {
+            background-color: #0056b3;
+        }
+
+        .contact-info {
+            margin-top: 20px;
+        }
+    </style>
+</head>
+
+<body>
+
+    <a href="#" class="back-button" onclick="history.go(-1); return false;">&lt; Back</a>
+
+    <h1>Contact Us - Tool Sphere</h1>
+
+    <div class="contact-info">
+        <p>Email: <a href="mailto:sujoyk211@gmail.com">sujoyk211@gmail.com</a></p>
+        <p>Telegram Username: sujoy56tt</p>
+    </div>
+
+    <h2>Reach Out to Us</h2>
+
+    <p>Feel free to reach out to us for any inquiries, feedback, or just to say hello! We appreciate your interest in Tool Sphere and are here to assist you.</p>
+
+    <h2>Technical Support</h2>
+
+    <p>If you encounter any issues with our tools or have technical questions, please don't hesitate to contact our technical support team. We're here to help!</p>
+
+    <h2>Stay Connected</h2>
+
+    <p>Follow us on social media for updates and announcements. Join our community to stay connected with other Tool Sphere users.</p>
+
+</body>
+
+      </html>
 
