--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -90,11 +90,11 @@
     You can opt-out of personalized advertising by visiting <a href="https://adssettings.google.com">Ad Settings</a>. For more information about how Google uses data when you use our website and how to control your information, please visit Google's <a href="https://policies.google.com/technologies/partner-sites">Privacy & Terms</a> page.
   </p>   
     <ul>
-    <li><strong>Contact Page:</strong> <a href="https://tool-sphere.github.io/contact">Tool Sphere Contact</a></li>
+    <li><strong>Contact Page:</strong> <a href="https://tool-sphere.github.io/contact-us">Tool Sphere Contact</a></li>
     <li><strong>Email:</strong> <a href="mailto:sujoyk211@gmail.com">sujoyk211@gmail.com</a></li>
   </ul>
 
-  <p>Feel free to contact us if you have any questions or need further clarification about our privacy practices.</p>
+  <p>Feel free to <a href="https://tool-sphere.github.io/contact-us">contact us</a> if you have any questions or need further clarification about our privacy practices.</p>
 
   <p>Thank you for choosing Tool Sphere!</p>
 
