--- a/about-us/index.html
+++ b/about-us/index.html
@@ -64,7 +64,7 @@
 
     <h2>Contact Us</h2>
 
-    <p>If you have any questions, suggestions, or just want to say hello, feel free to contact us at <a href="https://tool-sphere.github.io/contact-us">contact us pagw</a>.</p>
+    <p>If you have any questions, suggestions, or just want to say hello, feel free to contact us at <a href="https://tool-sphere.github.io/contact-us">contact us page</a>.</p>
 
     <h2>Visuals</h2>
 
