--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -47,7 +47,7 @@
 
     <div class="contact-info">
         <p>Email: <a href="mailto:sujoyk211@gmail.com">sujoyk211@gmail.com</a></p>
-        <p>Telegram Username: sujoy56tt</p>
+        <p>Telegram Username: <a href="https://t.me/crystalSujoy">crystalSujoy</a></p>
     </div>
 
     <h2>Reach Out to Us</h2>
