--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     <a href="/tools/translator">💬 • Text Translator </a>
     <a href="/tools/email-sender">📨 • Email Sender </a>
     <a href="/privacy-policy">🔏 • Privacy Policy </a>
+    <a href="/about-us">🔖 • About Us </a>
+    <a href="/contact-us">☎️ • Contact Us </a>
   </div>
 </div>
   
@@ -70,8 +72,10 @@ The platform automatically detects the source language and offers autocorrection
   
 <footer id="footer" style="background-color: #333; color: #fff; text-align: center; padding: 10px; bottom: 0; width: 100%;">
         <p>&copy; 2023 Your Website. All rights reserved.</p>
-  <a href="/privacy-policy" style="color: #fff;">Privacy Policy</a>
-    </footer>
+   <a href="/privacy-policy" style="color: #fff;">Privacy Policy</a> <br>
+  <a href="/about-us" style="color: #fff;">About Us</a> <br>
+  <a href="/contact-us" style="color: #fff;">Contact Us</a> <br>
+       </footer>
 </body>
 </html>
 
