--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="nav-header">
     <img src="/icons/android-chrome-512x512.png" class="nav-icon" alt="Tool Sphere Icon" width="50" height="50">
     <div class="nav-title">
-      🔧 Tool Sphere
+      Tool Sphere
     </div>
   </div>
   <div class="nav-btn">
