--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -4,11 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Free AI code generator : generate code using AI Without Login• Tool Sphere</title>
+  <title>Free Email Sender : Send Email message to anyone without login both html and text emails are supported</title>
   <meta name="description" content="Explore our AI-powered code generator – a revolutionary tool for effortless code creation in multiple programming languages. Enhance your coding experience with error-free snippets, streamlined development, and increased productivity. Try our free online code generation tool today!">
- <meta name="keywords" content="AI code generator, code generation tool, programming language generator, automatic code creation, code automation, text-to-code, code snippet generator, coding assistant, development tools, machine learning code, programming utilities, code optimization, code suggestions, programming productivity, software development, coding efficiency, online coding tool, syntax error-free code, programming assistance, AI code generator without login, code generator without login, no api ke required, replit ghost writer api, code writer api, code generator api, ai code generator api, free, no key required, no login required, no api token required, free code generator for all, free ai code generator, ai code generator tools, ai to generate code, ai code generator c, free ai python code generators, ai java code generator, ai js code generator, online ai code generator, ai code generator online, program generator ai online without login, AI code generator, automated code generation, code generation tool, AI programming, AI developer tools, machine learning code, AI-powered software development, code automation, boost productivity, generate code in multiple languages (list specific languages), create custom code templates, train AI models on code datasets, integrate with popular IDEs, generate code from natural language descriptions, debug and optimize generated code, support for web development, mobile development, data science, save time on coding tasks, reduce errors and bugs, improve code quality, accelerate development process, create innovative applications, make coding accessible to non-programmers, developers, programmers, software engineers, data scientists, startups, businesses, students, educators, how to generate code with AI, best AI code generator for Python, create web apps with AI code generation, automate code testing with AI, use AI to write code faster, AI code generation for beginners">
+ <meta name="keywords" content="">
   <link href="/css/landing-style.css" rel="stylesheet" type="text/css" />
-  <link href="/Etheme.css" rel="stylesheet" type="text/css" />
     <link href="/css/badge.css" rel="stylesheet" type="text/css" />
   <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
@@ -20,8 +19,6 @@
 <meta name="msapplication-config" content="/icons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
   <link rel="canonical" href="https://tool-sphere.github.io/" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.3/ace.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
 <style>
   .loading {
   height: 50px;
@@ -104,9 +101,9 @@
 </div>
   
   <div style="width: 100%; text-align: center; border: 0.5px solid white; border-radius: 5px;">
-<h1>AI code generator : generate code using AI in any language Without Login</h1>
+<h1>Email Sender Tool | Send Email To Anyone, Anytime, Anywhere without delay and no email accounts or access required and both html and text emails are supported</h1>
   </div> 
- <span style="text-align: center; align-items: center; font-size: 4em;"><span class="green-badge" style="margin-left: 10px;">New</span><span class="yellow-badge" style="margin-left: 10px;">AI</span><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
+ <span style="text-align: center; align-items: center; font-size: 4em;"><span class="green-badge" style="margin-left: 10px;">New</span><span class="gold-badge" style="margin-left: 10px;">Trending</span><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
  
 <div class="line"></div>
 <div style="width: 100%; align-items: center; flex-direction: column; display: flex;">
