--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -103,29 +103,14 @@
   <div style="width: 100%; text-align: center; border: 0.5px solid white; border-radius: 5px;">
 <h1>Email Sender Tool | Send Email To Anyone, Anytime, Anywhere without delay and no email accounts or access required and both html and text emails are supported</h1>
   </div> 
- <span style="text-align: center; align-items: center; font-size: 4em;"><span class="green-badge" style="margin-left: 10px;">New</span><span class="gold-badge" style="margin-left: 10px;">Trending</span><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
+ <span style="text-align: center; align-items: center; font-size: 4em;"><span class="gold-badge" style="margin-left: 10px;">Trending</span><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
  
 <div class="line"></div>
-<div style="width: 100%; align-items: center; flex-direction: column; display: flex;">
-<span style="font-size: 1em; color: white; margin-left: 4px; margin-top: 14px;">Your Prompt: </span>
-  <textarea maxlength="1000" placeholder="Enter What You want to Generate" id="prmpt" style="margin-top: 4px; width: 90%; height: 200px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
-  <br>
-  <button id="genbtn" onclick="generate()" style="margin-top: 10px; width: 70%; height: 3em; background-color: transparent; color: black; font-size: 2em; border-radius: 12px; border: 1px gold solid; margin-bottom: 18px;
-    box-shadow: rgba(69, 192, 245, 0.25) 0px 30px 60px -12px inset, rgba(69, 192, 245, 0.3) 0px 18px 36px -18px inset; color: white;">
-  GENERATE CODE  
-  </button>
-</div>
-<br>
 
-  <span style="display: block; font-size: 3em; color: white; margin-left: 10px; margin-top: 3em; margin-bottom: 7px;"> Generated Code: </span>
-  <div id="gcode" style="margin-top: 10px; margin: 0 auto; width: 100%; border: 1px solid green; border-radius: 4px; display: flex;">
-    <span id="bang" style="display: block; font-size: 22px; color: green; margin-left: 8px; margin-top: 4px; margin-bottom: 12px;">Generate Your Code now</span> <br>
-    
-  </div>
 <div id="editor" style="width: 90%; margin: 0 auto; height: 70%;" class="ace_dark ace-rk"></div>
 
 
-<h2>Our AI tool helps you generate code from your prompt without any api key ir login required, a process also known as Text-to-Code. Our AI can generate code in most languages, and you can also debug your code using our tool.</h2>
+<h2>Our Email Sender UI tool helps you to send emails for free without creating or linking your gmail account, and you can also send html templates using our tool, you can use this tool in many purposes like you can yse our <a>Email Sender API</a> to send emails messages through your project for login otp send or somthing;</h2>
 
 <!--- FAQ --->
 
