--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -110,7 +110,7 @@
 <div id="editor" style="width: 90%; margin: 0 auto; height: 70%;" class="ace_dark ace-rk"></div>
 
 
-<h2>Our Email Sender UI tool helps you to send emails for free without creating or linking your gmail account, and you can also send html templates using our tool, you can use this tool in many purposes like you can yse our <a>Email Sender API</a> to send emails messages through your project for login otp send or somthing;</h2>
+<h2>Our Email Sender UI tool helps you to send emails for free without creating or linking your mail account, and you can also send html templates using our tool, you can use this tool in many purposes like you can use our <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank">Email Sender API</a> to send emails messages through your project for login otp send or somthing;</h2>
 
 <!--- FAQ --->
 
@@ -144,24 +144,5 @@
   <a href="/about-us" style="color: #fff;">About Us</a> <br>
   <a href="/contact-us" style="color: #fff;">Contact Us</a> <br>
     </footer>
-  
-  <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "FAQPage",
-  "@name": "Email Sendee",
-  "mainEntity": [
-    {
-      "@type": "Question",
-      "name": "What is the best AI code generator?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "The best AI code generator is one that suits your specific needs. Our website offers a powerful code generation tool, allowing you to effortlessly generate code in multiple programming languages. Try it out and experience streamlined development with error-free snippets."
-      }
-    }
-  ]
-}
-  </script>
-  
 </body>
   </html>
